--- a/a/ad/adv/advocatekhoj.com.html
+++ b/a/ad/adv/advocatekhoj.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the advocatekhoj.com privacy policy that was archived on 2013-02-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130210100447id_/http%3A//www.advocatekhoj.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the advocatekhoj.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222062400id_/http%3A//www.advocatekhoj.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy Policy | AdvocateKhoj </title>
-<!-- Cache 01:56 -->
+<!-- Cache 22:16 -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="http://www.advocatekhoj.com/rss/rss.xml">
 <meta name="description" content="A free platform to find good lawyers or advocates in your area for all your legal needs. Also provides law college information, legal news and resources.">
@@ -11,7 +11,8 @@
 <meta name="revisit-after" content="1 days">
 <meta name="resource-type" content="html document">
 <meta name="author" content="advocatekhoj.com">
-<meta name="copyright" content="Copyright 2012, advocatekhoj.com">
+<meta name="copyright" content="Copyright 2013, advocatekhoj.com">
+<link rel="publisher" href="https://plus.google.com/100934952922549308191/">
 <meta name="distribution" content="Global">
 <meta name="language" content="en-us">
 <meta name="robots" content="index,follow,noodp,noydir">
@@ -97,16 +98,27 @@
 </td>
       <td><img src="/webtemplates/akhome/images/spacer.gif" width="1" height="45" border="0" alt=""></td>
     </tr>
-    <tr> 
+    <tr>
       <td colspan="2"><img name="akhome_r3_c1" src="/webtemplates/akhome/images/akhome_r3_c1.png" width="343" height="1" border="0" alt=""></td>
       <td><img name="akhome_r3_c3" src="/webtemplates/akhome/images/akhome_r3_c3.png" width="3" height="1" border="0" alt=""></td>
       <td><img src="/webtemplates/akhome/images/spacer.gif" width="1" height="1" border="0" alt=""></td>
     </tr>
-    <tr> 
+    <tr>
       <td colspan="6" align="left" valign="top"><img name="akhome_r4_c1" src="/webtemplates/akhome/images/akhome_r4_c1.png" width="777" height="2" border="0" alt=""></td>
       <td><img src="/webtemplates/akhome/images/spacer.gif" width="1" height="2" border="0" alt=""></td>
     </tr>
-    <tr> 
+
+  <!-- Begin Ad Frame -->
+  <tr>
+  	<td colspan="6" valign="middle" align="center">
+		<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script language="JavaScript" src="/include/javascript/adfeeder.php?tid=53352302e2478d38348588035&amp;m=js"></script>
+		<noscript><iframe width="777" height="92" marginheight="0" marginwidth="0" frameborder="0" scrolling="no" src="/include/javascript/adfeeder.php?tid=53352302e2478d38348588035&m=if"></iframe>
+		</noscript>
+    </td>
+  </tr>
+  <!-- End Ad Frame -->
+
+    <tr>
       <td height="20" colspan="7" rowspan="3" align="left" valign="top">	<!-- BEGIN : Content Area -->
 	<form action="newacount.php" method="post" name="frmlogin">
 	<input type="hidden" name="Command" value="">			
@@ -190,7 +202,7 @@
 <br clear="all">
 <div align="center">
     <!-- BEGIN: Advertise Area -->
-        <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script language="JavaScript" src="/include/javascript/adfeeder.php?tid=3644b10bdba6ec30839163747&amp;m=js&amp;URL=http://www.advocatekhoj.com/privacy.php">
+        <script language="JavaScript" src="/include/javascript/adfeeder.php?tid=3644b10bdba6ec30839163747&amp;m=js&amp;URL=http://www.advocatekhoj.com/privacy.php">
                 </script>
                     <!-- END: Advertise Area -->
 </div><br clear="all">
