brandzones.com (archived on 2013-12-22)
{
  "alexa_rank": 364865,
  "analysis_subcorpus": true,
  "categories": "",
  "char_count": 5411,
  "classifier_probability": 0.86,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.27,
  "homepage_snapshot_redirected_domain": "brandzones.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130811131758id_/http://www.brandzones.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130811131758id_/http%3A//brandzones.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "brandzones.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131222062649id_/http%3A//www.brandzones.com/privacy",
  "policy_title": "BrandZones - Privacy Policy",
  "policy_url": "brandzones.com/privacy",
  "sha1": "4927271c6ec8438db5df7a2c9093fa1f6d15c415",
  "simhash": 12015049795010766914,
  "simhash_updated": false,
  "site_hostname": "brandzones.com",
  "site_url": "http://brandzones.com",
  "smog": 14.41,
  "strict_updated": false,
  "timestamp": "20131222062649",
  "word_count": 857,
  "year": 2013
}

--- a/b/br/bra/brandzones.com.html
+++ b/b/br/bra/brandzones.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the brandzones.com privacy policy that was archived on 2013-01-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130131050457id_/http%3A//www.brandzones.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the brandzones.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222062649id_/http%3A//www.brandzones.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><!--<![endif]--><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -7,7 +7,7 @@
 		<link rel="icon" href="http://www.brandzones.com/images/favicon.ico" type="image/x-icon">
 		<title>BrandZones - Privacy Policy</title>
 		<link href="http://www.brandzones.com/css/brandzones_styles.css" rel="stylesheet" type="text/css">
-		<script async="" src="https://sb.scorecardresearch.com/beacon.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="http://cdn.jquerytools.org/1.2.7/full/jquery.tools.min.js"></script>
+		<script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="http://cdn.jquerytools.org/1.2.7/full/jquery.tools.min.js"></script>
 		<script type="text/javascript" src="http://www.brandzones.com/scripts/brandzones_scripts.js"></script>
 		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.4&amp;sensor=false"></script>
 		<script type="text/javascript">
@@ -95,41 +95,41 @@
 </div>
 <div id="side_bar">         
 	<div class="banner_container">
-		<iframe src='javascript:(function () { var goTo = "http://b.admedia.com/banner.php?id=Jj0_ITM&amp;color=default&amp;subid=[SUBID]&amp;ip=[IP]&amp;ua=[UA]&amp;transparency=[TR]&amp;highlight=[HL]&amp;dittoimage=0&amp;style=5&amp;size=300x250&amp;font=georgia&amp;bullet=arrow&amp;underline=false&amp;border=true&amp;heading=Related Searches&amp;text_size=14&amp;ref="+encodeURIComponent(parent.window.document.referrer)+"&amp;bpage=" + encodeURIComponent(document.referrer); this.location=goTo; })()' width="300" height="250" frameborder="0" scrolling="no" allowtransparency="yes"></iframe>
+		<script src="http://ib.adnxs.com/ttj?id=1089140&amp;size=300x250" type="text/javascript"></script>
 	</div>
 	<h2 class="black_heading sprite">Featured Video</h2>
 	<div class="section featured_video">
 		<div class="video_wrapper">
-			<iframe width="280" height="158" src="http://www.youtube.com/embed/mk-lf9rKnuY?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen=""></iframe>
+			<iframe width="280" height="158" src="http://www.youtube.com/embed/E_DL82iGZSQ?rel=0&amp;wmode=transparent" frameborder="0" allowfullscreen=""></iframe>
 			<div class="section_content">
-				<h3>Online Shoe Store - Offering Best Deals And Discounts!</h3>
-				<p>www.shoecartel.com - Buy trendy pair of Casual Boots at discounted prices from the World's leading s...</p>
+				<h3>Twilight Saga Cast Garner Lucrative Endorsement Deals</h3>
+				<p>http://Facebook.com/ClevverTV - Become a Fan! http://Twitter.com/ClevverTV - Follow Us! If you've go...</p>
 			</div>         
 		</div>      
 	</div>
 	<div class="banner_container">
-		<iframe src='javascript:(function () { var goTo = "http://b.admedia.com/banner.php?id=Jj0_ITM&amp;color=default&amp;subid=[SUBID]&amp;ip=[IP]&amp;ua=[UA]&amp;transparency=[TR]&amp;highlight=[HL]&amp;dittoimage=0&amp;style=5&amp;size=300x250&amp;font=georgia&amp;bullet=arrow&amp;underline=false&amp;border=true&amp;heading=Related Searches&amp;text_size=14&amp;ref="+encodeURIComponent(parent.window.document.referrer)+"&amp;bpage=" + encodeURIComponent(document.referrer); this.location=goTo; })()' width="300" height="250" frameborder="0" scrolling="no" allowtransparency="yes"></iframe>
+		<script src="http://ib.adnxs.com/ttj?id=1089140&amp;size=300x250" type="text/javascript"></script>
 	</div>
 </div>	</div>
 		<div id="footer_container" class="sprite">
-			<div id="footer" class="centered_container clearfix">     
+			<div id="footer" class="centered_container clearfix">
 				<ul class="navigation">
-					<li class="label">Site Sections</li>	
+					<li class="label">Site Sections</li>
 					<li><a href="http://www.brandzones.com/">Home</a></li>
 					<li><a href="http://www.brandzones.com/deals/">Deals</a></li>
-					<li><a href="http://www.brandzones.com/top-brands/">Top Brands</a></li> 
+					<li><a href="http://www.brandzones.com/top-brands/">Top Brands</a></li>
 					<li><a href="http://www.brandzones.com/categories/">Categories</a></li>
 					<li><a href="http://www.brandzones.com/articles/">Articles</a></li>
-				</ul>        
+				</ul>
 				<ul class="navigation">
 					<li class="label">Corporate</li>
-					<li class="selected"><a href="http://www.brandzones.com/privacy/">Privacy Policy</a></li>	        
+					<li class="selected"><a href="http://www.brandzones.com/privacy/">Privacy Policy</a></li>
 					<li><a href="http://www.brandzones.com/terms/">Terms &amp; Conditions</a></li>
 					<li><a href="http://www.brandzones.com/contact/">Contact</a></li>
 				</ul>
 				<p class="copyright">Copyright © 2013 BrandZones.com.<br>All rights reserved.</p>
 				<ul id="social">
-					<li class="label">Follow Us:</li>	
+					<li class="label">Follow Us:</li>
 					<li class="social"><a class="icon facebook" href="http://www.facebook.com/pages/BrandZones/293351370782196"></a></li>
 					<li class="social"><a class="icon youtube" href="http://www.youtube.com/BrandZones"></a></li>
 					<li class="social"><a class="icon twitter" href="https://twitter.com/Brand_Zones"></a></li>
@@ -158,17 +158,6 @@
 				fjs.parentNode.insertBefore(js, fjs);
 			}(document, 'script', 'facebook-jssdk'));
 		</script>
-		<script type="text/javascript">
-			//comscore begin
-			var _comscore = _comscore || [];
-			_comscore.push({ c1: "8", c2: "8259994" ,c3: "2012" });
-			(function() {
-				var s = document.createElement("script"), el = document.getElementsByTagName("script")[0]; s.async = true;
-				s.src = (document.location.protocol == "https:" ? "https://sb" : "http://b") + ".scorecardresearch.com/beacon.js";
-				el.parentNode.insertBefore(s, el);
-			})();
-			//comscore end
-		</script>
-		<script type="text/javascript" src="http://ads.pro-market.net/ads/scripts/site-131513.js"></script>
+		<script type="text/javascript" src="http://pixel.brandzones.com/wrapper.php"></script>
 	
 </body></html>
