--- a/f/ft/fta/ftalk.com.html
+++ b/f/ft/fta/ftalk.com.html
@@ -1,28 +1,90 @@
-<!--The following is the downloaded HTML source of the ftalk.com privacy policy that was archived on 2013-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130605201954id_/http%3A//www.ftalk.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ftalk.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222065021id_/http%3A//www.ftalk.com/privacy_policy.php) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#" itemscope="" itemtype="http://schema.org/Product"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html itemscope="" itemtype="http://schema.org/Product" xmlns="http://www.w3.org/1999/xhtml" class="notie"><!--<![endif]--><head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <meta name="description" content="fTalk is the best free Facebook chat messenger application. Stay in touch with your Facebook friends right from your desktop, with fTalk!">
-        <meta name="keywords" content="download ftalk, ftalk messenger, facebook chat, ftalk chat, ftalk instant messenger, free instant messenger, free facebook chat">
-        <!-- Facebook meta tags -->
-        <meta property="fb:app_id" content="285592984810370">
-        <meta property="og:title" content="fTalk - Free Facebook Chat Messenger for your desktop.">
-        <meta property="og:description" content="fTalk is the best free Facebook chat messenger application. Stay in touch with your Facebook friends right from your desktop, with fTalk!">
-        <meta property="og:type" content="website">
-        <meta property="og:image" content="http://www.ftalk.com/images/ftalk-logo.jpg">
-        <meta property="og:url" content="http://www.ftalk.com">
-        <meta property="og:site_name" content="fTalk for Facebook">
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-        <link href="/template/assets/main.css" rel="stylesheet" type="text/css">
-        <link href="/template/assets/en/main.css" rel="stylesheet" type="text/css">
-        <link href="/template/windows/assets/inner.css" rel="stylesheet" type="text/css">
-        <!--[if IE]>
-                <link href="/template/assets/iefix.css" type="text/css" rel="stylesheet" />
-        <![endif]-->
-        <script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script type="text/javascript" src="js/jquery-1.7.min.js"></script>
-        <script type="text/javascript" src="js/common.js"></script>
+        <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+                    <link rel="canonical" href="http://www.ftalk.com/privacy_policy.php">
+                		<script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script type="text/javascript">
+//<![CDATA[
+    var _rb_appid = null;
+    var _rb_language = "en";
+    var _rb_systemid = "431";
+    var _rb_ga_page_name = "Privacy";
+    
+    var ga_host = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src=\""+ga_host+"google-analytics.com/ga.js\" type=\"text/javascript\"%3E%3C/script%3E"));
+
+function ga_track_download(id){
+    send_ga_query(_rb_ga_page_name+"/download/btn["+id+"]/sysid["+_rb_systemid+"]/appid["+_rb_appid+"]/lng["+_rb_language+"]", "UA-20793725-1");
+}
+
+function ga_track_view( ){
+    send_ga_query(_rb_ga_page_name+"/view/sysid["+_rb_systemid+"]/appid["+_rb_appid+"]/lng["+_rb_language+"]", "UA-20793725-1");
+}
+
+function send_ga_query(query, ga_account){
+    if(typeof _gat != "undefined" && _gat != null){
+	   try{
+	       var ga_tracker = _gat._getTracker(ga_account);
+	       ga_tracker._initData( );
+	       ga_tracker._trackPageview(query);
+	   }
+	   catch($e){}
+    }
+    else{
+	   setTimeout(function(){send_ga_query(query, ga_account)}, 1000);
+    }
+}    var ml_host = (("https:" == document.location.protocol) ? "https://" : "http://");
+var ml_host = ml_host+"www.mlstat.com";
+document.write(unescape("%3Cscript src='"+ml_host+"/scripts/appid.V2.js' type='text/javascript'%3E%3C/script%3E"));
+
+var _ml_stat_loaded = false;
+
+function ml_stats_load(){
+    if(typeof appidObj != "undefined" && appidObj != null){
+	   appidObj.init(_rb_systemid, ml_host);
+       _rb_appid = appidObj.getAppID();
+       if(_rb_appid == null){
+          _rb_appid = 0;
+          appidObj.forceAppId(_rb_appid);
+          appidObj.init(_rb_systemid, ml_host);
+       }
+	   appidObj.track("hit");
+	   ga_track_view();
+	   _ml_stat_loaded = true;
+    }
+    else{
+	   setTimeout(function(){ml_stats_load()}, 1000);
+    }
+}
+
+function ml_track_download(){
+    send_ml_query("download");
+}
+
+function send_ml_query(_event){
+    if(_ml_stat_loaded == true){
+	   appidObj.track(_event, _rb_language);
+    }
+    else{
+	   setTimeout(function(){send_ml_query(_event)}, 1000);
+    }
+}
+
+ml_stats_load();    
+    function track_download(id){
+	   send_ml_query('download');
+	   ga_track_download(id);
+    }
+//]]>
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script><script src="https://www.mlstat.com/scripts/appid.V2.js" type="text/javascript"></script>		<link href="/styles/default/main.css" rel="stylesheet" type="text/css">
+<link href="/styles/default/en/main.css" rel="stylesheet" type="text/css">
+<link href="/styles/default/inner.css" rel="stylesheet" type="text/css">
+		<script type="text/javascript" src="/js/default/jquery-1.7.min.js"></script>
+<script type="text/javascript" src="/js/default/common.js"></script>
         <script type="text/javascript">
             //<![CDATA[
             $(document).ready(function( ) {
@@ -30,36 +92,15 @@
             });
             //]]>
         </script>
-        <script type="text/javascript">
-//<![CDATA[
-	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-	document.write(unescape("%3Cscript src=\"" + gaJsHost + "google-analytics.com/ga.js\" type=\"text/javascript\"%3E%3C/script%3E"));
-
-	function track_download(id){
-		ga_report("/privacy/download/" + id + "/o=1/r=0/lang=en"); 
-	}
-	
-	function track_view( ){
-		ga_report("/privacy/view/o=1/r=0/lang=en"); 
-	}
-	
-	function ga_report(str){
-		var ga_tracker = _gat._getTracker("UA-20793725-1");
-		ga_tracker._initData( );
-		ga_tracker._trackPageview(str);
-	}
-	
-	//]]>
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-	        <title>fTalk - Free Facebook Chat Messenger for your desktop.</title>
-    </head>
-    <body>
+        <title>fTalk - Free Facebook Chat Messenger for your desktop.</title>
+	</head>
+	<body>
         <div id="container">
             <div id="content">
                 <div id="header">
-                    <h1><a class="pseudo-img" href="/">fTalk</a></h1>
+                                        <h1><a class="pseudo-img" href="/">fTalk</a></h1>
                     <div id="plus-one">
-    <a href="https://plus.google.com/115575010753360733690" target="_blank"><img src="/template/assets/googleplus.png"></a>
+    <a href="https://plus.google.com/115575010753360733690" target="_blank"><img src="/styles/default/googleplus.png"></a>
 </div>
 
 <div id="twitter">
@@ -69,34 +110,32 @@
 	  
 <div id="facebook">
     <iframe src="//www.facebook.com/plugins/like.php?locale=en_US&amp;href=https%3A%2F%2Fwww.facebook.com%2Fftalkchatting&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21&amp;appId=353037318056643" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowtransparency="true"></iframe>
-</div>                        <div id="os-buttons">
-        <form id="os_form" action="/privacy_policy.php" method="post">
-            <p class="catch">
-                <a href="javascript:void(0)" class="mac-button"></a>
-                <input type="hidden" name="t" value="mac">
-            </p>
-            <div class="windows-button"></div>
-        </form>
-    </div>
-                        <div id="langs-box" class="">
-        <form id="langs_form" action="/privacy_policy.php" method="post">
-            <select id="langs-select" name="l">
-                                    <option selected="selected" value="en">English</option>
-                                    <option value="es">Spanish</option>
-                                    <option value="pt">Portuguese</option>
-                                    <option value="fr">French</option>
-                                    <option value="de">German</option>
-                                    <option value="it">Italian</option>
-                                    <option value="tr">Turkish</option>
-                            </select>
-        </form>
-    </div>
-                                    </div>
+</div>                    <div id="os-buttons">
+    <form id="os_form" action="" method="post">
+        <p class="catch">
+            <a href="javascript:void(0)" class="mac-button"></a>
+            <input type="hidden" name="thm" value="mac">
+        </p>
+        <div class="windows-button"></div>
+    </form>
+</div>                    <div id="langs-box" class="no-template">
+    <form id="langs_form" action="" method="post">
+        <select id="langs-select" name="ln" onchange="javascript: document.getElementById('langs_form').submit();">
+                            <option value="en" selected="">English</option>
+                            <option value="es">Spanish</option>
+                            <option value="pt">Portuguese</option>
+                            <option value="fr">French</option>
+                            <option value="de">German</option>
+                            <option value="it">Italian</option>
+                            <option value="tr">Turkish</option>
+                    </select>
+    </form>
+</div>                                                        </div>
                 <div id="content-body">
-<div id="download-button">
+                    <div id="download-button">
     <div class="download-button-background"><div class="download-link-background"></div></div>
-    <a class="pseudo-img" href="http://download.ftalk.com/o/1/r/0/fTalkV4.exe" onclick="track_download('b1')">Get fTalk! - Download now</a>
-    <a href="http://download.ftalk.com/o/1/r/0/fTalkV4.exe" onclick="track_download('b1');">Click here to download fTalk!</a>
+    <a class="pseudo-img download-url" href="http://download.ftalk.com/fTalkSetup.exe" target="downframe" onclick="track_download('b1')">Get fTalk! - Download now</a>
+    <a class="download-url" href="http://download.ftalk.com/fTalkSetup.exe" target="downframe" onclick="track_download('b1');">Click here to download fTalk!</a>
 </div><h2>Privacy Policy</h2>
 <p>Koyote-Lab Inc. ("fTalk") takes your privacy very seriously. Please read the following to learn more about fTalk's Privacy Policy ("Policy"). This Policy details how fTalk receives, collects and uses information in connection with their website located at ftalk.com and software provided on the ftalk.com website (the website and software collectively referred to herein as "Site").</p>
 <br><br><br>
@@ -132,40 +171,41 @@
 <br>
 <p>Please direct all questions in connection with this Policy via e-mail to <a href="mailto:privacy@ftalk.com" id="p1">privacy@ftalk.com</a><noscript><span> privacy  <span> @  <span> ftalk.com </noscript>&nbsp;or by writing to Koyote-Lab Inc., Attention: Privacy Policy Administrator, 40 Kimonos St.3095 Limassol, Cyprus<br><br>&nbsp;</p>
 <script type="text/javascript">
-//<![CDATA[
-	var s1, p1;
-	s1 = document.getElementById("s1");
-	s1.href = "mailto:";
-	s1.href += "support";
-	s1.href += "@";
-	s1.href += "ftalk.com";
-	s1.innerHTML = "support";
-	s1.innerHTML += "@";
-	s1.innerHTML += "ftalk.com";
-	
-	p1 = document.getElementById("p1");
-	p1.href = "mailto:";
-	p1.href += "privacy";
-	p1.href += "@";
-	p1.href += "ftalk.com";
-	p1.innerHTML = "privacy";
-	p1.innerHTML += "@";
-	p1.innerHTML += "ftalk.com";
-//]]>
+    //<![CDATA[
+    var s1, p1;
+    s1 = document.getElementById("s1");
+    s1.href = "mailto:";
+    s1.href += "support";
+    s1.href += "@";
+    s1.href += "ftalk.com";
+    s1.innerHTML = "support";
+    s1.innerHTML += "@";
+    s1.innerHTML += "ftalk.com";
+
+    p1 = document.getElementById("p1");
+    p1.href = "mailto:";
+    p1.href += "privacy";
+    p1.href += "@";
+    p1.href += "ftalk.com";
+    p1.innerHTML = "privacy";
+    p1.innerHTML += "@";
+    p1.innerHTML += "ftalk.com";
+    //]]>
 </script>
-</div>
-</div>
-<div id="footer">
+                </div>
+            </div>
+            <div id="footer">
     <ul>
         <li class="no-border"><a href="/">Home</a></li>
-        <li><a href="about.php">About</a></li>
-        <li><a href="support/contact_us" target="_blank">Contact Us</a></li>
-        <li><a href="support/faq" target="_blank">FAQ</a></li>
-        <li><a href="terms_of_use.php">Terms of Use</a></li>
-        <li><a href="privacy_policy.php">Privacy Policy</a></li>
-        <li><a href="dmca_policy.php">DMCA Policy</a></li>
+        <li><a href="/about.php">About</a></li>
+        <li><a href="http://www.ftalk.com/support/contact_us" target="_blank">Contact Us</a></li>
+        <li><a href="http://www.ftalk.com/support/faq" target="_blank">FAQ</a></li>
+        <li><a href="/terms_of_use.php">Terms of Use</a></li>
+        <li><a href="/privacy_policy.php">Privacy Policy</a></li>
+        <li><a href="/dmca_policy.php">DMCA Policy</a></li>
     </ul>
     <p>Copyright © 2013 All rights reserved to Koyote-Lab Inc.</p>
+
     <p class="mcafee catch">
         <span>
             <!-- START SCANALERT CODE -->
@@ -174,13 +214,8 @@
             </a>
             <!-- END SCANALERT CODE -->
         </span>
-    </p>
-</div>
-</div>
-<script type="text/javascript" defer="defer">
-    //<![CDATA[
-    track_view( );
-	    //]]>
-</script>
-
+</p>
+</div>        </div>
+	    <iframe id="downframe" width="0" height="0" frameborder="0" src="about:blank" name="downframe"></iframe>
+	
 </body></html>
