--- a/h/hy/hye/hyenacart.com.html
+++ b/h/hy/hye/hyenacart.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hyenacart.com privacy policy that was archived on 2013-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130622035656id_/http%3A//hyenacart.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hyenacart.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222070321id_/http%3A//hyenacart.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -501,7 +501,7 @@ If you have any questions or suggestions regarding our privacy policy, please co
 <div class="footer-outer">
     <div class="border-round">
         <div id="footer-info">
-There are 975 shoppers online and 112,495 registered HC shoppers        </div>
+There are  shoppers online and 122,449 registered HC shoppers        </div>
     </div>
 </div>
 
