gotfrag.com (archived on 2013-12-22)
{
  "alexa_rank": 532168,
  "analysis_subcorpus": false,
  "categories": "uncategorized",
  "char_count": 19153,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.05,
  "homepage_snapshot_redirected_domain": "gotfrag.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131004151740id_/http://gotfrag.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131004151740id_/http%3A//gotfrag.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "majorleaguegaming.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131222071556id_/http%3A//accounts.majorleaguegaming.com/privacy_policy",
  "policy_title": "MLG Account Management - MLG - Major League Gaming",
  "policy_url": "accounts.majorleaguegaming.com/privacy_policy",
  "sha1": "90849abd25da9d97abd41dafdb1070d0dd7aa0eb",
  "simhash": 13725351548707087209,
  "simhash_updated": false,
  "site_hostname": "gotfrag.com",
  "site_url": "http://gotfrag.com",
  "smog": 14.55,
  "strict_updated": false,
  "timestamp": "20131222071556",
  "word_count": 3127,
  "year": 2013
}

--- a/g/go/got/gotfrag.com.html
+++ b/g/go/got/gotfrag.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gotfrag.com privacy policy that was archived on 2013-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130609155952id_/http%3A//accounts.majorleaguegaming.com/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gotfrag.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222071556id_/http%3A//accounts.majorleaguegaming.com/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
     <title>MLG Account Management - MLG - Major League Gaming</title>
@@ -22,20 +22,35 @@
     </script>
     <!-- End Gigya login -->
 
-    <link href="/assets/application-945189a989155ccbc5bf94612095f60b.css" media="screen" rel="stylesheet" type="text/css">
-    <script src="/assets/application-44fc625173d7eccb1655145c7f6b9d1f.js" type="text/javascript"></script>
+    <link href="/assets/application-1d692dc80cdec18848f123adbc68a817.css" media="screen" rel="stylesheet" type="text/css">
+    <script src="/assets/enhanced-plugin-2f8140f16cd2f898b9b9199d8d9843e9.js" type="text/javascript"></script>
+    <script src="/assets/application-15acead053a8db1ed2e5a38a5129192a.js" type="text/javascript"></script>
     <meta content="authenticity_token" name="csrf-param">
-<meta content="cy+pIEoPMT1s3Y1+3ZF3ogCCWEwVUd8PjY35l2UBkMQ=" name="csrf-token">
+<meta content="jzEhZnvR3++QvoZ7drN0RdBoWZukcZroBCk0ebiMz2I=" name="csrf-token">
 
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
+    <script type="text/javascript">
+      function rankingsPush() {
+        var url = String(document.referrer);
+        // confirm they came from Google
+        if (url.indexOf ("google.com") !=-1) {
+          var urlVars = {};
+          var parts = url.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+            urlVars[key] = value;
+          });
+          // Push to GA Custom Variables
+          _gaq.push(['_setCustomVar', 4 , 'Organic-Google-Rankings', urlVars["cd"], 1]);
+        }
+      }
+    </script>
   </head>
-  <body id="privacy_policies" class="show">
+  <body id="privacy_policies" class="show" onload="rankingsPush();">
     <div id="header">
 <div class="games-bar">
 <div class="nav-container">
-<ul><li><a href="http://gamebattles.majorleaguegaming.com/xbox360/call-of-duty-black-ops-ii/">Black Ops II (360)</a></li><li><a href="http://gamebattles.majorleaguegaming.com/ps3/call-of-duty-black-ops-ii/">Black Ops II (PS3)</a></li><li><a href="http://gamebattles.majorleaguegaming.com/xbox360/halo-4/">Halo 4 (360)</a></li><li><a href="http://gamebattles.majorleaguegaming.com/pc/league-of-legends/">League of Legends (PC)</a></li><li><a href="http://gamebattles.majorleaguegaming.com/pc/starcraft-ii-wings-of-liberty/">StarCraft II (PC)</a></li><li><a href="http://gamebattles.majorleaguegaming.com/xbox360/nba-2k13/">NBA 2K13 (360)</a></li><li><a href="http://gamebattles.majorleaguegaming.com/xbox360/gears-of-war-judgment/">Gears of War: Judgment (360)</a></li><li><a href="http://gamebattles.majorleaguegaming.com/xbox360/fifa-soccer-13/">FIFA 13 (360)</a></li></ul>
+<ul><li><a href="http://gamebattles.majorleaguegaming.com/xbox360/call-of-duty-ghosts/">Call of Duty: Ghosts (360)</a></li><li><a href="http://gamebattles.majorleaguegaming.com/ps3/call-of-duty-ghosts/">Call of Duty: Ghosts (PS3)</a></li><li><a href="http://gamebattles.majorleaguegaming.com/xbox360/nba-2k14/">NBA 2K14 (360)</a></li><li><a href="http://gamebattles.majorleaguegaming.com/xbox360/madden-nfl-25/">Madden 25 (360)</a></li><li><a href="http://gamebattles.majorleaguegaming.com/xbox360/fifa-soccer-14/">FIFA 14 (360)</a></li><li><a href="http://gamebattles.majorleaguegaming.com/xbox360/gears-of-war-judgment/">Gears of War (360)</a></li><li><a href="http://gamebattles.majorleaguegaming.com/pc/hearthstone-heroes-of-warcraft/">Hearthstone (PC)</a></li><li><a href="http://gamebattles.majorleaguegaming.com/pc/dota-2/">DOTA 2 (PC)</a></li></ul>
 </div>
 </div>
 <div class="main-nav">
@@ -53,8 +68,8 @@
 <div class="watch-play">
 <a href="http://tv.majorleaguegaming.com" class="watch-button">Watch</a>
 <a href="http://gamebattles.majorleaguegaming.com" class="play-button">Play</a>
-<a href="http://majorleaguegaming.com" class="logo-button">MLG</a>
-</div>
+<a href="http://www.majorleaguegaming.com"><img alt="Major League Gaming" class="home-logo" src="/assets/mlg/header/mlg-new-1bd32ca7dc5064c2110a964ff9791e34.png">
+</a></div>
 </div>
 </div>
 </div>
@@ -254,7 +269,16 @@ Attn: Privacy</p>
 </div>
 
     </div>
-    <div id="footer">
+    <!-- Lotame code -->
+<script id="LOTCC_3149" src="//tags.crwdcntrl.net/c/3149/cc.js?ns=_cc3149"></script>
+<script>
+  //<![CDATA[
+    _cc3149.bcp();
+  //]]>
+</script>
+
+<!-- End Lotame code -->
+<div id="footer">
 <div class="navigation">
 <div class="column first">
 <h3>MLG</h3>
@@ -292,7 +316,7 @@ Attn: Privacy</p>
 <li><a href="http://www.majorleaguegaming.com/footer-blackops">Call of Duty</a></li>
 <li><a href="http://www.majorleaguegaming.com/footer-leagueoflegends">League of Legends</a></li>
 <li><a href="http://www.majorleaguegaming.com/footer-starcraft">StarCraft</a></li>
-<li><a href="http://tv.majorleaguegaming.com/shows/425-top-10s">Top 10</a></li>
+<li><a href="http://www.majorleaguegaming.com/footer-top10">Top 10</a></li>
 </ul>
 </div>
 <div class="column">
