--- a/3/3i/3in/3interactive.net.html
+++ b/3/3i/3in/3interactive.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 3interactive.net privacy policy that was archived on 2013-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130617112510id_/http%3A//www.3interactive.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 3interactive.net privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222072232id_/http%3A//www.3interactive.net/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
  <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -73,8 +73,8 @@
   <div id="content">
    <div id="panel_crumbs">Privacy</div>
    <div id="random_quote">
-    <div id="quote_content"><span id="quote_open">“</span>3 Interactive has performed well for our campaign—delivering consistent high performance and excellent customer service.<span id="quote_close">”</span></div>
-    <div id="quoter">-Joanie Kwok<br>Account Supervisor<br>Vizeum US<br><br><img src="images/logo_4.png"></div>
+    <div id="quote_content"><span id="quote_open">“</span>3 Interactive provides us with excellent service, great communication, and great customer relations.<span id="quote_close">”</span></div>
+    <div id="quoter">-Lisa A. Jennings<br>National Account Coordinator<br>Morris Digital Works<br><br><img src="images/logo_11.png"></div>
    </div>
    <script type="text/javascript">show_quote();</script>
    <div id="page_copy">
