--- a/b/ba/ban/bandswallpapers.com.html
+++ b/b/ba/ban/bandswallpapers.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bandswallpapers.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621060924id_/http%3A//www.bandswallpapers.com/index.php%3Ftemplate%3Dlinks) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bandswallpapers.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222075032id_/http%3A//www.bandswallpapers.com/index.php%3Ftemplate%3Dlinks) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html dir="ltr"><head>
 
@@ -9,7 +9,7 @@
 <meta name="description" content="Download wallpapers for free. The best website for free music wallpapers...Add a touch to your desktop background.">
 <meta name="distribution" content="global">
 <link rel="stylesheet" href="./templates/4light_grey/style.css">
-<script language="javascript" type="text/javascript">
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script language="javascript" type="text/javascript">
 <!--
   function opendetailwindow() { 
     window.open('','detailwindow','toolbar=no,scrollbars=yes,resizable=no,width=680,height=480');
@@ -27,7 +27,7 @@ var casaleU=escape(window.location.href);
 var casaleHost=' type="text/javascript" src="http://as.casalemedia.com/s?s=';
 document.write('<scr'+'ipt'+casaleHost+'71390&amp;u=');
 document.write(casaleU+'&amp;f=1&amp;id='+casaleR+'"><\/scr'+'ipt>');
-//--></script><script type="text/javascript" src="http://as.casalemedia.com/s?s=71390&amp;u=https%3A//web.archive.org/web/20130621060924id_/http%253A//www.bandswallpapers.com/index.php%253Ftemplate%253Dlinks&amp;f=1&amp;id=1867450663.7683012"></script>
+//--></script><script type="text/javascript" src="http://as.casalemedia.com/s?s=71390&amp;u=https%3A//web.archive.org/web/20131222075032id_/http%253A//www.bandswallpapers.com/index.php%253Ftemplate%253Dlinks&amp;f=1&amp;id=1867450445.4087453"></script>
 <!-- Casale Media 2007 (C) -->
 </head>
 <body bgcolor="#ffffff" text="#555555" link="#555555" vlink="#555555" alink="#555555" topmargin="0" leftmargin="0">
@@ -118,9 +118,9 @@ document.write(casaleU+'&amp;f=1&amp;id='+casaleR+'"><\/scr'+'ipt>');
 <tr> 
 <td align="center" class="row1">
 <br>
-<a href="./img3032.htm"><img src="./data/thumbnails/11/Led_Zeppelin_Memorial.jpg" border="1" width="100" height="75" alt="Led Zeppelin"></a><br><b>Led Zeppelin</b>
+<a href="./img1446.htm"><img src="./data/thumbnails/27/tupac4eva.jpg" border="1" width="100" height="75" alt="2Pac 5"></a><br><b>2Pac 5</b>
 <br>
-Comments: 0<br>bigledzeppelinfan<br>
+Comments: 0<br>wallpaperguy<br>
 <br>
 </td>
 </tr>
@@ -130,8 +130,8 @@ Comments: 0<br>bigledzeppelinfan<br>
 </tbody></table>
 <img src="./templates/4light_grey/images/spacer.gif" alt="" width="150" height="1">
 <center>
-<iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=22943&amp;m=3&amp;tp=3&amp;f=b&amp;v=1.4&amp;c=7574&amp;r=&amp;d=f" width="120" height="600" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
-<a  href="http://media.fastclick.net/w/click.here?sid=22943&m=3&c=7574"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=22943&m=3&tp=3&f=b&v=1.4&c=7574&r=&d=n" width=120 height=600 border=0 ></a>
+<iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=22943&amp;m=3&amp;tp=3&amp;f=b&amp;v=1.4&amp;c=6566&amp;r=&amp;d=f" width="120" height="600" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+<a  href="http://media.fastclick.net/w/click.here?sid=22943&m=3&c=6566"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=22943&m=3&tp=3&f=b&v=1.4&c=6566&r=&d=n" width=120 height=600 border=0 ></a>
 </iframe><noscript>
 <a href="http://media.fastclick.net/w/click.here?sid=22943&m=3&c=1"  target="_blank">
 <img src="http://media.fastclick.net/w/get.media?sid=22943&m=3&tp=3&d=s&c=1&f=b&v=1.4"
@@ -320,20 +320,21 @@ Powered by <b>4images</b> 1.7.6
 </center>
 <br>
 
-<div align="center"><!-- ValueClick Media 468x60 and 728x90 Banner CODE for bandswallpapers.com -->
-<script language="javascript" src="http://media.fastclick.net/w/get.media?sid=22943&amp;m=1&amp;tp=5&amp;d=j&amp;t=n"></script>
-<noscript><a href="http://media.fastclick.net/w/click.here?sid=22943&m=1&c=1" target="_blank">
-<img src="http://media.fastclick.net/w/get.media?sid=22943&m=1&tp=5&d=s&c=1"
-width=728 height=90 border=1></a></noscript>
-<!-- ValueClick Media 468x60 and 728x90 Banner CODE for bandswallpapers.com --><br>
+<div align="center"><!-- ValueClick Media 468x60 and 728x90 Banner CODE for BANDSWALLPAPERS -->
+<script type="text/javascript">var vclk_options = ;</script><script class="vclk_pub_code" type="text/javascript" src="http://cdn.fastclick.net/js/adcodes/pubcode.min.js?sid=22943&amp;media_id=1&amp;media_type=5&amp;version=1.4&amp;exc=1"></script><noscript><a href="http://media.fastclick.net/w/click.here?sid=22943&m=1&c=1" target="_blank"><img src="http://media.fastclick.net/w/get.media?sid=22943&m=1&tp=5&d=s&c=1&vcm_acv=1.4" width="728" height="90" border="1"></a></noscript>
+<!-- ValueClick Media 468x60 and 728x90 Banner CODE for BANDSWALLPAPERS --><br>
 <br>
 </div>
 
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-2916343-1";
-urchinTracker();
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-41954059-1', 'bandswallpapers.com');
+  ga('send', 'pageview');
+
 </script>
 
 </body></html>
